--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "prisma": "^5.22.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
