--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@types/nodemailer": "^6.4.17",
     "@uploadcare/blocks": "^0.50.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -50,6 +51,7 @@
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
+    "nodemailer": "^6.9.16",
     "prisma": "^5.22.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
