--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "groq-sdk": "^0.8.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
